[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MarCatchSheep/UI_Elements/Scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://MarCatchSheep/SFX/Cold-Steel-Coffin.ogg" type="AudioStream" id=3]
[ext_resource path="res://MarCatchSheep/SFX/2HU_Pichuun_Abridged..ogg" type="AudioStream" id=4]
[ext_resource path="res://MarCatchSheep/UI_Elements/Scripts/FPS_Display.gd" type="Script" id=5]
[ext_resource path="res://MarCatchSheep/UI_Elements/Scripts/MenuRoot.gd" type="Script" id=6]
[ext_resource path="res://Fonts/MochiResized.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/MochiTooltip.tres" type="DynamicFont" id=8]
[ext_resource path="res://MarCatchSheep/VFX/StarsBackgroundMaterial.tres" type="Material" id=9]
[ext_resource path="res://MarCatchSheep/Visuals/MenuSheep0001.png" type="Texture" id=10]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/lod = 0.1

[sub_resource type="DynamicFont" id=1]
size = 43
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]

[node name="BG" type="CanvasLayer" parent="."]
layer = 0

[node name="StarsSky" type="ColorRect" parent="BG"]
material = ExtResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="BackgroundImage" type="TextureRect" parent="BG"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 7

[node name="BlurTop" type="ColorRect" parent="BG"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[node name="MenuRoot" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 6 )

[node name="FPS_Display" type="Label" parent="MenuRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 20.0
margin_bottom = 34.0
text = "FPS:"
script = ExtResource( 5 )

[node name="VersionDetail" type="Label" parent="MenuRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 580.0
margin_bottom = 594.0
text = "v.1.1.2"

[node name="SlideTween" type="Tween" parent="MenuRoot"]

[node name="MainMenu" type="MarginContainer" parent="MenuRoot"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -300.0
margin_bottom = 300.0
custom_constants/margin_right = 55
custom_constants/margin_top = -288

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/MainMenu"]
margin_top = -288.0
margin_right = 969.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuRoot/MainMenu/CenterContainer"]
margin_left = 28.0
margin_top = 340.0
margin_right = 941.0
margin_bottom = 548.0
custom_constants/separation = 141

[node name="Game Title" type="Label" parent="MenuRoot/MainMenu/CenterContainer/HBoxContainer"]
margin_top = 72.0
margin_right = 604.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Marisa in Dreamland"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/MainMenu/CenterContainer/HBoxContainer"]
margin_left = 745.0
margin_right = 913.0
margin_bottom = 208.0
custom_constants/separation = 20

[node name="PlayBtn" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../QuitBtn")
custom_colors/font_color_disabled = Color( 0.384314, 0.592157, 0.690196, 1 )
custom_colors/font_color_focus = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color = Color( 0, 0.4, 0.588235, 1 )
custom_colors/font_color_hover = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color_pressed = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Play"
align = 2

[node name="SettingBtn" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 168.0
margin_bottom = 132.0
custom_colors/font_color_disabled = Color( 0.384314, 0.592157, 0.690196, 1 )
custom_colors/font_color_focus = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color = Color( 0, 0.4, 0.588235, 1 )
custom_colors/font_color_hover = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color_pressed = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Settings"
align = 2

[node name="QuitBtn" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 168.0
margin_bottom = 208.0
focus_neighbour_bottom = NodePath("../PlayBtn")
custom_colors/font_color_disabled = Color( 0.384314, 0.592157, 0.690196, 1 )
custom_colors/font_color_focus = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color = Color( 0, 0.4, 0.588235, 1 )
custom_colors/font_color_hover = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_colors/font_color_pressed = Color( 0.0666667, 0.137255, 0.262745, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Quit"
align = 2

[node name="SettingsMenu" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1024.0
margin_right = 1024.0
script = ExtResource( 2 )

[node name="MusicTest" type="AudioStreamPlayer" parent="MenuRoot/SettingsMenu"]
stream = ExtResource( 3 )
bus = "Music"

[node name="SFXTest" type="AudioStreamPlayer" parent="MenuRoot/SettingsMenu"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/SettingsMenu"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HSeparator" type="VBoxContainer" parent="MenuRoot/SettingsMenu/CenterContainer"]
margin_left = 355.0
margin_top = 67.0
margin_right = 669.0
margin_bottom = 533.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator"]
margin_right = 314.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Settings"
align = 1
uppercase = true

[node name="Sounds" type="GridContainer" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator"]
margin_top = 78.0
margin_right = 314.0
margin_bottom = 184.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="Musicbus" type="Label" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_right = 135.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_left = 145.0
margin_right = 245.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
focus_neighbour_top = NodePath("../../KeybindBtn")
focus_neighbour_right = NodePath("../TestMusic")
max_value = 1.0
step = 0.05
value = 1.0

[node name="TestMusic" type="Button" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_left = 255.0
margin_right = 314.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 8 )
text = "Test"

[node name="SFXbus" type="Label" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_top = 58.0
margin_right = 135.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 7 )
text = "Sounds"

[node name="SFXSlider" type="HSlider" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_left = 145.0
margin_top = 58.0
margin_right = 245.0
margin_bottom = 78.0
rect_min_size = Vector2( 100, 20 )
focus_neighbour_right = NodePath("../TestSFX")
max_value = 1.0
step = 0.05
value = 1.0

[node name="TestSFX" type="Button" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds"]
margin_left = 255.0
margin_top = 58.0
margin_right = 314.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 8 )
text = "Test"

[node name="Displays" type="GridContainer" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator"]
margin_top = 214.0
margin_right = 314.0
margin_bottom = 320.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="FPSOption" type="Label" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays"]
margin_right = 222.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Display FPS"

[node name="CheckButton" type="CheckButton" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays"]
margin_left = 232.0
margin_right = 308.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 8 )
pressed = true

[node name="Fullscreen" type="Label" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays"]
margin_top = 58.0
margin_right = 222.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 7 )
text = "Fullscreen"

[node name="FullscreenChecker" type="CheckButton" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays"]
margin_left = 232.0
margin_top = 58.0
margin_right = 308.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 8 )

[node name="KeybindBtn" type="Button" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator"]
margin_top = 350.0
margin_right = 314.0
margin_bottom = 404.0
custom_fonts/font = ExtResource( 7 )
text = "Keybind Options"

[node name="returnBtn" type="ToolButton" parent="MenuRoot/SettingsMenu/CenterContainer/HSeparator"]
margin_top = 434.0
margin_right = 314.0
margin_bottom = 466.0
focus_neighbour_bottom = NodePath("../Sounds/MusicSlider")
custom_fonts/font = ExtResource( 8 )
text = "return"

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 560.0
margin_right = 363.0
margin_bottom = 590.0
custom_fonts/font = ExtResource( 8 )
text = "This project was made for the Touhou Fan Game Jam 8"

[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer/PlayBtn" to="MenuRoot" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer/SettingBtn" to="MenuRoot" method="_on_SettingBtn_pressed"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/HBoxContainer/VBoxContainer/QuitBtn" to="MenuRoot" method="_on_QuitBtn_pressed"]
[connection signal="value_changed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds/MusicSlider" to="MenuRoot/SettingsMenu" method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds/TestMusic" to="MenuRoot/SettingsMenu" method="_on_TestMusic_pressed"]
[connection signal="value_changed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds/SFXSlider" to="MenuRoot/SettingsMenu" method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Sounds/TestSFX" to="MenuRoot/SettingsMenu" method="_on_TestSFX_pressed"]
[connection signal="toggled" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays/CheckButton" to="MenuRoot/SettingsMenu" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/Displays/FullscreenChecker" to="MenuRoot/SettingsMenu" method="_on_FullscreenChecker_toggled"]
[connection signal="pressed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/KeybindBtn" to="MenuRoot/SettingsMenu" method="_on_KeybindBtn_pressed"]
[connection signal="pressed" from="MenuRoot/SettingsMenu/CenterContainer/HSeparator/returnBtn" to="MenuRoot" method="_on_returnBtn_pressed"]
